--- a/index.html
+++ b/index.html
@@ -4,7 +4,57 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Sign-Up Form</title>
   </head>
-  <body></body>
+  <body>
+    <main class="main-container">
+      <div>Odin Logo</div>
+      <section>
+        <p>
+          This is not a real online service! You know you need something like
+          this in your life to help you realize your deepest dreams. Sign up
+          <em>now</em> to get started.
+        </p>
+        <p>You <em>know</em> you want to.</p>
+
+        <form action="">
+          <h2>Let's do this!</h2>
+
+          <label for="first-name">
+            First name
+            <input id="first-name" type="text" placeholder="thor" />
+          </label>
+
+          <label for="last-name">
+            Last name
+            <input id="last-name " type="text" placeholder="odinson" />
+          </label>
+
+          <label for="email">
+            Email
+            <input id="email " type="email" />
+          </label>
+
+          <label for="phone-number">
+            Phone Number
+            <input id="phone-number" type="tel" />
+          </label>
+
+          <label for="password">
+            Password
+            <input id="password" type="password" />
+          </label>
+
+          <label for="password-confirm">
+            Confirm password
+            <input id="password-confirm" type="password" />
+          </label>
+
+          <button>Create Account</button>
+        </form>
+        <p>Already have an account? <a href="#">Log in</a></p>
+      </section>
+    </main>
+  </body>
 </html>
