add the image on the left

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
   </head>
   <body>
     <main class="main-container">
-      <div>Odin Logo</div>
+      <div class="picture">
+        <p class="picture-author">
+          Photo by
+          <a href="https://unsplash.com/@roanlavery" class="link"
+            >Roan Lavery</a
+          >
+          on
+          <a href="https://unsplash.com/" class="link">Unsplash</a>
+        </p>
+      </div>
       <section>
         <p>
           This is not a real online service! You know you need something like
