add logo on top of the picture

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <body>
     <main class="main-container">
       <div class="picture">
+        <div class="odin-logo">
+          <img src="./odin-lined.png" alt="the Odin logo" />
+          <p>Odin</p>
+        </div>
         <p class="picture-author">
           Photo by
           <a href="https://unsplash.com/@roanlavery" class="link"
