--- a/index.html
+++ b/index.html
@@ -23,50 +23,71 @@
           <a href="https://unsplash.com/" class="link">Unsplash</a>
         </p>
       </div>
-      <section>
-        <p>
-          This is not a real online service! You know you need something like
-          this in your life to help you realize your deepest dreams. Sign up
-          <em>now</em> to get started.
-        </p>
-        <p>You <em>know</em> you want to.</p>
 
-        <form action="">
+      <section class="text-content">
+        <div class="text-introduction">
+          <p>
+            This is not a real online service! You know you need something like
+            this in your life to help you realize your deepest dreams. Sign up
+            <em>now</em> to get started.
+          </p>
+          <p>You <em>know</em> you want to.</p>
+        </div>
+
+        <form action="" class="signup-form">
           <h2>Let's do this!</h2>
+          <ul>
+            <li>
+              <label class="label" for="first-name">
+                First name
+                <input
+                  class="input"
+                  id="first-name"
+                  type="text"
+                  placeholder="thor"
+                />
+              </label>
 
-          <label for="first-name">
-            First name
-            <input id="first-name" type="text" placeholder="thor" />
-          </label>
+              <label class="label" for="last-name">
+                Last name
+                <input
+                  class="input"
+                  id="last-name "
+                  type="text"
+                  placeholder="odinson"
+                />
+              </label>
+            </li>
+            <li>
+              <label class="label" for="email">
+                Email
+                <input class="input" id="email " type="email" />
+              </label>
 
-          <label for="last-name">
-            Last name
-            <input id="last-name " type="text" placeholder="odinson" />
-          </label>
+              <label class="label" for="phone-number">
+                Phone Number
+                <input class="input" id="phone-number" type="tel" />
+              </label>
+            </li>
+            <li>
+              <label class="label" for="password">
+                Password
+                <input class="input" id="password" type="password" />
+              </label>
 
-          <label for="email">
-            Email
-            <input id="email " type="email" />
-          </label>
-
-          <label for="phone-number">
-            Phone Number
-            <input id="phone-number" type="tel" />
-          </label>
-
-          <label for="password">
-            Password
-            <input id="password" type="password" />
-          </label>
-
-          <label for="password-confirm">
-            Confirm password
-            <input id="password-confirm" type="password" />
-          </label>
+              <label class="label" for="password-confirm">
+                Confirm password
+                <input class="input" id="password-confirm" type="password" />
+              </label>
+            </li>
+          </ul>
 
           <button>Create Account</button>
         </form>
-        <p>Already have an account? <a href="#">Log in</a></p>
+
+        <p class="text-under-form">
+          Already have an account? <a href="#">Log in</a>
+        </p>
       </section>
     </main>
   </body>
