add js password validation

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Sign-Up Form</title>
   </head>
   <body>
@@ -88,20 +89,20 @@
                 <div>
                   <label class="label" for="password "> Password </label>
                   <input
-                    class="input error"
+                    class="input "
                     id="password"
                     name="password"
                     type="password"
                     required
                   />
-                <span class="error-message">*Passwords do not match</span>
+                <span class="error-message">* Passwords don't match</span>
                 </div>
                 <div>
                   <label class="label" for="password-confirm ">
                     Confirm password
                   </label>
                   <input
-                  class="input error"
+                  class="input "
                   id="password-confirm"
                   name="password-confirm"
                   type="password"
